# jjbridge-engine-v8

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  build_Android.ps1  build_Android.sh  build_Linux.sh  build_Windows.ps1  build_macOS.sh  build_v8_JNI.ps1  build_v8_JNI.sh  checkstyle-suppressions.xml  checkstyle.xml  pom.xml
.github/workflows/: build_android.yml  build_linux.yml  build_macos.yml  build_windows.yml  release.yml
android/: CMakeLists.txt  Vagrantfile  build.sh  pom.xml
android/src/main/: AndroidManifest.xml
assembly-descriptors/: linux-assembly-descriptor.xml  macos-assembly-descriptor.xml  windows-assembly-descriptor.xml
core/: pom.xml
core/src/main/cpp/: V8-wrapper.cpp
core/src/main/cpp/V8/: Environment.cpp  Environment.h  Handle.h  InspectorClient.cpp  InspectorClient.h  MyPlatform.h  Runtime.cpp  Runtime.h
core/src/main/java/jjbridge/v8/: V8.java  V8Engine.java
core/src/main/java/jjbridge/v8/inspector/: V8MessageHandler.java
core/src/main/java/jjbridge/v8/runtime/: EqualityChecker.java
core/src/test/java/jjbridge/utils/: NativeReferenceTest.java
core/src/test/java/jjbridge/v8/: V8InstrumentedTest.java  V8Test.java
core/src/test/java/jjbridge/v8/inspector/: InspectorInstrumentedTest.java  V8MessageHandlerTest.java
core/src/test/java/jjbridge/v8/runtime/: RuntimeInstrumentedTest.java  RuntimeTest.java
linux/: CMakeLists.txt  Vagrantfile  build.sh  pom.xml
macos/: CMakeLists.txt  Vagrantfile  build.sh  pom.xml  setup.sh
script/: build_v8_JNI.sh
script/android/: Vagrantfile  build.sh  setup.sh
script/linux/: CMakeLists.txt  Vagrantfile  build.sh  setup.sh
src/android/: AndroidManifest.xml
src/main/cpp/: V8-wrapper.cpp
src/main/cpp/V8/: BlockingQueue.h  Channel.h  Environment.cpp  Environment.h  ExternalData.h  FunctionCallbackData.h  Handle.h  InspectorClient.cpp  InspectorClient.h  MyPlatform.h  Runtime.cpp  Runtime.h
src/main/java/jjbridge/engine/utils/: Cache.java  CleanUpAction.java  NativeLibraryLoader.java  NativeReference.java  ReferenceMonitor.java
src/main/java/jjbridge/engine/v8/: V8.java  V8Engine.java
src/main/java/jjbridge/engine/v8/inspector/: Inspector.java  V8MessageHandler.java
src/main/java/jjbridge/engine/v8/runtime/: AccessorsFactory.java  EqualityChecker.java  Reference.java  ReferenceTypeGetter.java  Runtime.java
src/main/java/jjbridge/utils/: Cache.java  CleanUpAction.java  NativeLibraryLoader.java  NativeReference.java  ReferenceMonitor.java
src/main/java/jjbridge/v8/: V8.java  V8Engine.java
src/main/java/jjbridge/v8/inspector/: Inspector.java  V8MessageHandler.java
src/main/java/jjbridge/v8/runtime/: AccessorsFactory.java  EqualityChecker.java  Reference.java  ReferenceTypeGetter.java  Runtime.java
src/test/java/jjbridge/: MemoryTimeWaster.java
src/test/java/jjbridge/engine/: MemoryTimeWaster.java
src/test/java/jjbridge/engine/utils/: CacheTest.java  NativeReferenceTest.java  ReferenceMonitorTest.java
src/test/java/jjbridge/engine/v8/: V8EngineTest.java  V8Test.java
src/test/java/jjbridge/engine/v8/inspector/: InspectorInstrumentedTest.java  InspectorTest.java  V8MessageHandlerTest.java
src/test/java/jjbridge/engine/v8/runtime/: AccessorsFactoryTest.java  ReferenceTest.java  RuntimeBenchmarkTest.java  RuntimeTest.java
src/test/java/jjbridge/utils/: CacheTest.java  NativeReferenceTest.java  ReferenceMonitorTest.java
src/test/java/jjbridge/v8/: V8EngineInstrumentedTest.java  V8EngineTest.java  V8Test.java
src/test/java/jjbridge/v8/inspector/: InspectorInstrumentedTest.java  InspectorTest.java  V8MessageHandlerTest.java
src/test/java/jjbridge/v8/runtime/: AccessorsFactoryTest.java  ReferenceTest.java  RuntimeBenchmarkTest.java  RuntimeInstrumentedTest.java  RuntimeTest.java
windows/: build.sh  pom.xml
